--- a/views/home.ejs
+++ b/views/home.ejs
@@ -215,8 +215,9 @@
                     </div>
                 </div>
 
-                
-
         </main>
+
+        <!-- footer -->
+        <%- include('includes/footer.ejs')%>
 </body>
 </html>
