--- a/views/Products.ejs
+++ b/views/Products.ejs
@@ -13,7 +13,7 @@
 </head>
 <body>
         <!-- Navbar -->
-        <%- include("includes/navbar.ejs")%>
+        <%- include("includes/header.ejs")%>
 
         <main class="homeMainSection">
             
@@ -35,10 +35,12 @@
                     <h2>Categories</h2>
                     <div class="categories">
 
+                        <a href="product/3423423">
                         <div class="category">
                             <img src="https://greencart-gs.vercel.app/assets/organic_vegitable_image-B6WcGgPL.png">
                             <p>Organic Veggies</p>
                         </div>
+                        </a>
 
                          <div class="category">
                             <img src="https://greencart-gs.vercel.app/assets/fresh_fruits_image-GVwDikkj.png">
