--- a/views/Products.ejs
+++ b/views/Products.ejs
@@ -35,7 +35,7 @@
                     <h2>Categories</h2>
                     <div class="categories">
 
-                        <a href="product/3423423">
+                        <a href="product/3423423" style="text-decoration: none; color: rgb(0, 0, 0);">
                         <div class="category">
                             <img src="https://greencart-gs.vercel.app/assets/organic_vegitable_image-B6WcGgPL.png">
                             <p>Organic Veggies</p>
