--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -9,7 +9,7 @@
             height: 35px;
             padding: 1vw 9vw;
             /* background-color: orange; */
-            border-bottom: 1px solid grey;
+            border-bottom: 1px solid rgb(197, 197, 197);
             font-family: "Varela Round", sans-serif;
             display: flex;
             justify-content: space-between;
@@ -113,6 +113,7 @@
 
         <div class="navLinks-searchBar">
             <div class="navLinks">
+                <a href="/seller">Seller</a>
                 <a href="/product">Home</a>
                 <a href="#">All Products</a>
                 <a href="#">Contact</a>
