--- a/public/css/sellerStyle.css
+++ b/public/css/sellerStyle.css
@@ -128,6 +128,11 @@ label p{
 }
 
 
+.imageInputs{
+    display: flex;
+    flex-direction: column;
+}
+
 .productAddBtn{
     width: 8%;
     height: auto;
