--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -115,7 +115,7 @@
             <div class="navLinks">
                 <a href="/seller">Seller</a>
                 <a href="/product">Home</a>
-                <a href="#">All Products</a>
+                <a href="/product/all">All Products</a>
                 <a href="#">Contact</a>
             </div>
             <div class="navSearch">
