--- a/views/includes/sellerHeader.ejs
+++ b/views/includes/sellerHeader.ejs
@@ -64,7 +64,7 @@
             <div class="navLinks">
                 <p>Hi, Admin</p>
                 &nbsp; &nbsp; &nbsp;
-                <form>
+                <form method="GET" action="/product">
                     <button class="logoutBtn">Logout</button>
                 </form>
                 
