--- a/views/seller.ejs
+++ b/views/seller.ejs
@@ -124,7 +124,7 @@
             </div>
 
             <div class="opt2Box optBox">
-                <p>All Product</p>
+                <p class="allProductText">All Product</p>
                 <br>
                 <div class="allProducts">
                     <table>
