--- a/public/css/homeStyle.css
+++ b/public/css/homeStyle.css
@@ -142,8 +142,8 @@ p{
 .bestSellingProduct{
     width: 170px;
     height: auto;
-    padding: 7px;
-    border-radius: 8px;
+    padding: 7px 7px 15px 7px;
+    border-radius: 4px;
     border: 1px solid grey;
     overflow: hidden;
     display: flex;
@@ -163,11 +163,12 @@ p{
 }
 
 .bestSellingProductName{
-    font-size: 17px;
+    font-size: 15px;
     color: rgb(63, 63, 63);
     font-weight: 600;
     align-self: flex-start;
     margin-top: 5px;
+    margin-bottom: 8px;
 }
 
 .price-and-btn{
@@ -187,7 +188,7 @@ p{
 
 .bestSellingProductPrice{
     color: #3b996d;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: 600;
     margin: 0px;
 }
@@ -198,7 +199,7 @@ p{
     margin-left: 5px;
     margin-top: 0px;
     margin-bottom: 0px;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 .AddButton{
@@ -350,6 +351,28 @@ p{
     gap: 1.5vw;
     grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
     margin-bottom: 12vw;
+}
+
+/* All Products Style */
+.allProductMainSection{
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.allProductMainSection .sectionTitle{
+    width: 82%;
+    font-size: 20px;
+    margin-bottom: 20px;
+    font-weight: 600;
+    color: rgb(66, 66, 66);
+}
+
+.showProductsBox{
+    width: 82%;
+    height: auto;
+    display: grid;
+    gap: 1.5vw;
+    grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
 }
 
 
