--- a/views/allProducts.ejs
+++ b/views/allProducts.ejs
@@ -20,6 +20,7 @@
 
         <div class="showProductsBox">
                 <% for(let product of products) { %>
+                <a href='/product/<%= product.productId %>'>
                 <div class="bestSellingProduct">
                             <img src="<%=product.productImage1%>">
                             <p class="bestSellingProductType"><%=product.productCategory%></p>
@@ -35,7 +36,8 @@
                                     <button class="AddButton"><i class="fa-solid fa-cart-shopping" style="color: #2f7052;"></i> <span>Add </span></button>
                                 </div>
                             </div>
-                        </div>
+                        </div> 
+                        </a>
                     <% } %>
 
         </div>
