--- a/public/css/homeStyle.css
+++ b/public/css/homeStyle.css
@@ -397,7 +397,7 @@ p{
 
 .details{
     width: 82%;
-    margin: 1vw 0 6vw 0;
+    margin: 1vw 0 4vw 0;
     display: flex;
 }
 
@@ -511,6 +511,23 @@ p{
     background-color:  #4fbf8b;
     color: white;
     margin-left: 10px;
+}
+
+.relatedProductText{
+    margin: 0;
+}
+
+.relatedProductTextUnderline{
+    width: 80px;
+    height: 3px;
+    border-radius: 10px;
+    background-color: #4fbf8b;
+    margin: 0  0 15px 0;
+    border: none;
+}
+
+.relatedProductsBox{
+    margin: 0 0 4vw 0;
 }
 
 /* Hover effects */
