--- a/public/css/homeStyle.css
+++ b/public/css/homeStyle.css
@@ -544,12 +544,6 @@ p{
     height: auto;
 }
 
-.cartSectionBox2{
-    background-color: green;
-    width: 33%;
-    height: auto;
-}
-
 .shoppingCartText{
     margin-bottom: 20px;
 }
@@ -570,6 +564,7 @@ p{
 /* Cart Table */
 .cartTable{
     width: 100%;
+    margin-bottom: 15px;
 }
 
 .cartTableHeading{
@@ -658,7 +653,115 @@ p{
     text-align: center;
 }
 
+.continueShopping{
+    color:  #4fbf8b;
+    margin-top: 15px;
+    font-size: 14px;
+    text-decoration:none;
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+}
+
+
+.cartSectionBox2{
+    background-color:#f6f3f4;
+    width: 30%;
+    height: auto;
+    padding: 1.3vw;
+}
+
+.cartSectionBox2 h2{
+    margin: 0;
+    font-size: 22px;
+    font-weight: 600;
+    color: #364153;
+}
+
+.cartSectionBox2 hr{
+    margin: 15px 0px;
+    background-color: #6a7282a2;
+}
+
+.cartSectionBox2Titles{
+    font-size: 14px;
+    font-weight: 600;
+    color: #364153;
+    margin-top: 15px;
+    margin-bottom: 0px;
+}
+
+.addressBox{
+    margin-top: 15px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.address{
+    width: 75%;
+}
+
+.shippingAddress{
+    color: #6a7282a2;
+}
+
+.changeAddressBtn{
+    color:  #4fbf8b;
+    background-color: #f6f3f4;
+    border:none;
+    font-weight: 600;
+    font-size: 15px;
+    font-family: "Varela Round", sans-serif; 
+}
+
+.paymentMethod{
+    width: 100%;
+    padding: 8px;
+    font-family: "Varela Round", sans-serif; 
+    margin-top: 5px;
+    margin-bottom: 5px;
+    outline: none;
+    border-color: #6a7282a2;
+}
+
+.cartDetailsAmountBox{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    font-size: 13px;
+    color:#6a7282a2;
+}
+
+.cartTotalAmount{
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.shippingFreeText{
+    color: #4fbf8b;
+    font-weight: 600;
+}
+
+.paymentBtns{
+    width: 100%;
+    padding: 10px;
+    background-color: #4fbf8b;
+    color: white;
+    font-size: 15px;
+    font-weight: 500;
+    border: none;
+    font-family:  "Varela Round", sans-serif; 
+    margin-top: 10px;
+}
+
 /* Hover effects */
 button:hover{
     cursor: pointer;
+}
+
+.continueShopping:hover{
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 15px;
 }
