--- a/public/css/homeStyle.css
+++ b/public/css/homeStyle.css
@@ -669,6 +669,7 @@ p{
     width: 30%;
     height: auto;
     padding: 1.3vw;
+    position: relative;
 }
 
 .cartSectionBox2 h2{
@@ -710,9 +711,33 @@ p{
     color:  #4fbf8b;
     background-color: #f6f3f4;
     border:none;
-    font-weight: 600;
     font-size: 15px;
     font-family: "Varela Round", sans-serif; 
+}
+
+.changeAddressBox{
+    width: 90%;
+    min-height: 30px;
+    border: 0.5px solid grey;
+    font-family: "Varela Round", sans-serif;
+    font-size: 13px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    z-index: 3;
+    top: 130px;
+}
+
+.addNewAddress{
+    width: 100%;
+    padding: 7px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #4fbf8b;
+    background-color: white;
+    text-decoration: none;
 }
 
 .paymentMethod{
@@ -755,6 +780,89 @@ p{
     margin-top: 10px;
 }
 
+/* Add new Address Style */
+.newShippingAddressBox{
+    width: 82%;
+    height: 500px;
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.newAddressFormBox{
+    width: 45%;
+    height: 100%;
+}
+
+.newAddressBoxImage{
+    width: 45%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.newAddressBoxImage img{
+    width: 90%;
+    height: auto;
+    aspect-ratio: 1/1;
+    object-fit: contain;
+}
+
+.newAddressHeading{
+    font-size: 24px;
+    color: #364153;
+    margin-bottom: 45px;
+}
+
+.newAddressHeading span{
+    color: #4fbf8b;
+}
+
+.newAddressForm{
+    width: 90%;
+    height: auto;
+}
+
+.newAddressForm input{
+    border: 0.5px solid  rgb(187, 185, 185);
+    font-family: "Varela Round", sans-serif;
+    padding: 9px;
+    outline: none;
+    border-radius: 4px;
+}
+
+.inputFullSize{
+    width: 95%;
+    margin-bottom: 10px;
+}
+
+.formInnerBox{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.formInnerBox input{
+    width: 43%;
+}
+
+.saveAddressBtn{
+    width: 100%;
+    padding: 10px;
+    border: none;
+    outline: none;
+    background-color: #4fbf8b;
+    color: white;
+    font-family: "Varela Round", sans-serif;
+    font-size: 15px;
+    margin-top: 25px;
+}
+
+
 /* Hover effects */
 button:hover{
     cursor: pointer;
@@ -764,4 +872,17 @@ button:hover{
     cursor: pointer;
     font-weight: 600;
     font-size: 15px;
+}
+
+.changeAddressBox:hover{
+    background-color: white;
+}
+
+.addNewAddress:hover{
+    cursor: pointer;
+    background-color: #4fbf8b27;
+}
+
+.newAddressForm input:focus{
+    border-color: #4fbf8b;
 }
